fixed alignment with work section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,6 @@ body {
     top: 0; */
     height: 12vh;
     padding: 2%;
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
     width: 100%;
     background-color: rgb(242 140 45);
@@ -87,6 +85,7 @@ body {
 
 .main-section {
     padding: 2%;
+    width: 100%;
 }
 
 .main-section-header {
@@ -95,22 +94,62 @@ body {
     margin-bottom: 2%;
 }
 
-.weat-img {
+.wheat-img {
     width: 100%;
     border-bottom: solid 3px #b05737;
 }
 
-.work-row {
+
+.app-wrap {
     justify-content: center;
     align-items: center;
+    /* align-content: center; */
+    width: 100%;
+}
+
+.large-work-row {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2%;
+    width: 80%;
 }
 
 .large-work {
     height: 600px;
-    width: 80%;
+    width: 100%;
     background-image: url(../images/digital-marketing-meeting.jpg);
     background-size: cover;
     background-position: center;
+}
+
+.large-work a {
+    text-decoration: none;
+}
+
+.small-work-row {
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2%;
+    width: 80%; 
+}
+
+.node-work {
+    height: 250px;
+    width: 48%;
+    background-image: url(../images/node-pic.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.react-work {
+    height: 250px;
+    width: 48%;
+    background-image: url(../images/react-img.png);
+    background-size: cover;
+    background-position: center;
+}
+.node-work a {
+    text-decoration: none;
 }
 
 .overlay {
@@ -118,13 +157,17 @@ body {
     align-items: flex-end;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .overlay h2 {
     font-weight: 700;
     font-size: 25px;
     margin: 3%;
+    color: white;
+}
+
+.node-overlay h2 {
+    color: black;
 }
 
 .footer {
